; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_core/extr_adv.c_adv_send_end.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_core/extr_adv.c_adv_send_end.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bt_mesh_send_cb = type { i32 (i32, i8*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.bt_mesh_send_cb*, i8*)* @adv_send_end to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @adv_send_end(i32 %0, %struct.bt_mesh_send_cb* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.bt_mesh_send_cb*, align 8
  %6 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.bt_mesh_send_cb* %1, %struct.bt_mesh_send_cb** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load %struct.bt_mesh_send_cb*, %struct.bt_mesh_send_cb** %5, align 8
  %8 = icmp ne %struct.bt_mesh_send_cb* %7, null
  br i1 %8, label %9, label %21

9:                                                ; preds = %3
  %10 = load %struct.bt_mesh_send_cb*, %struct.bt_mesh_send_cb** %5, align 8
  %11 = getelementptr inbounds %struct.bt_mesh_send_cb, %struct.bt_mesh_send_cb* %10, i32 0, i32 0
  %12 = load i32 (i32, i8*)*, i32 (i32, i8*)** %11, align 8
  %13 = icmp ne i32 (i32, i8*)* %12, null
  br i1 %13, label %14, label %21

14:                                               ; preds = %9
  %15 = load %struct.bt_mesh_send_cb*, %struct.bt_mesh_send_cb** %5, align 8
  %16 = getelementptr inbounds %struct.bt_mesh_send_cb, %struct.bt_mesh_send_cb* %15, i32 0, i32 0
  %17 = load i32 (i32, i8*)*, i32 (i32, i8*)** %16, align 8
  %18 = load i32, i32* %4, align 4
  %19 = load i8*, i8** %6, align 8
  %20 = call i32 %17(i32 %18, i8* %19)
  br label %21

21:                                               ; preds = %14, %9, %3
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
